2005-08-01  Frank Ch. Eigler  <fche@elastic.org>

	* elaborate.cxx (derive_probes, semantic_pass_symbols): Improve
	error message specificity.
	* translate.cxx (emit_module_init): Compact partial registration
	recovery code.
	(emit_module_exit): Invert deregistration sequence.
	* testsuite/buildok/four.stp: Some module() test case.
	
2005-08-01  Frank Ch. Eigler  <fche@elastic.org>

	* elaborate.cxx (derive_probes): Print error if results empty.
	* tapsets.cxx (dwflpp_assert): Handle positive RCs, which likely
	came from errno.
	(dwflpp::setup): Improve missing debug-info messages.
	* testsuite/semko/sixteen,seventeen.stp: New tests.
	* runtest.sh: Save stdout/stderr of FAIL/XPASS test cases.
	* Makefile.am (clean-local): Clean up testsuite/.
	* Makefile.in, aclocal.m4: Regenerated.

2005-07-29  Frank Ch. Eigler  <fche@redhat.com>

	From Graydon Hoare <graydon@redhat.com:
	* tapsets.cxx (var_expanding_copy_visitor): Correct lvalue cases.

2005-07-29  Frank Ch. Eigler  <fche@redhat.com>

	* Makefile.am: Make sure stpd goes into libexec/systemtap/
	* Makefile.in: Regenerated.

2005-07-29  Frank Ch. Eigler  <fche@redhat.com>

	* configure.ac: Fail configure stage if elfutils 0.111+ is not found.
	* Makefile.am, elaborate.cxx, tapsets.cxx: Unconditionalize.
	* configure, Makefile.in, config.in: Regenerated.

2005-07-29  Roland McGrath  <roland@redhat.com>

	* Version 0.2 distribution.

	* systemtap.spec.in: Include %{_datadir}/systemtap/tapset directory.
	(%check): Add section, run make check.
	* Makefile.am (EXTRA_DIST): Add runtest.sh.
	* Makefile.in: Regenerated.

	* systemtap.spec.in: Include man pages.
	* Makefile.am (man_MANS): Renamed to dist_man_MANS.

	* configure.ac: Add AM_CONDITIONAL definition of HAVE_LIBDW.
	* Makefile.am [HAVE_LIBDW] (stap_SOURCES_libdw): New variable.
	(stap_SOURCES): Use it, moving loc2c.c there.
	* configure, config.in: Regenerated.

	* tapsets.cxx: <libdw.h> -> <elfutils/libdw.h>
	* loc2c.c, loc2c.h: Likewise.
